--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,6 @@ hi
   <li><a href="11gamelvl1.html">game level 1</a>
   <li><a href="1level2.html">game level 2</a>
   <li><a href="1level3.html">game level 3</a>
-  <li><a href="...">...</a>
-  
+  <li><a href="1level4.html">game level 4</a>
+  <li><a href="..">...</a>
+<li><a href="..">...</a>
