--- a/public/1level2.html
+++ b/public/1level2.html
@@ -82,7 +82,7 @@ function myCheckHit(){
    if ( myHitOther('myImg01','myImg04') ){
        alert('You Win, now go to the next level')
       document.getElementById('myImg01').style.left = '60px'
-      location = 'https://www.google.ca'
+      location = 'https://mannysekhon.github.io/Game-development-2023/public/1level3.html'
    }
 
    // more if statements here
