--- a/public/1level4.html
+++ b/public/1level4.html
@@ -71,6 +71,12 @@ function myCheckHit(){
       document.getElementById('myImg01').style.top = '60px'
    }   
    
+      
+        if ( myHitOther('myImg01','myImg06') ){
+       //alert('you lose')
+      document.getElementById('myImg01').style.left = '20px'
+      document.getElementById('myImg01').style.top = '60px'
+   }   
 
 
    // YOU WIN and go to next level!
