--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,5 @@ hi
   <li><a href="1level2.html">game level 2</a>
   <li><a href="1level3.html">game level 3</a>
   <li><a href="1level4.html">game level 4</a>
-  <li><a href="..">...</a>
+  <li><a href="win.html">win</a>
 <li><a href="..">...</a>
