--- a/public/3site.html
+++ b/public/3site.html
@@ -4,13 +4,12 @@
   <title>Beckmann Berry Farm</title>
   <style>
     /* Reset */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-css
-Copy code
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 /* General Styles */
 body {
   font-family: Arial, sans-serif;
@@ -23,7 +22,7 @@ body {
 }
 
 header {
-  background-color: #333;
+  background-color: royalblue; /* Changed from #333 to royalblue */
   padding: 20px 0;
 }
 
@@ -58,7 +57,7 @@ section {
 }
 
 h1, h2, h3 {
-  color: #333;
+  color: royalblue; /* Changed from #333 to royalblue */
 }
 
 /* Home Section */
@@ -103,7 +102,7 @@ h1, h2, h3 {
 
 /* Footer */
 footer {
-  background-color: #333;
+  background-color: royalblue; /* Changed from #333 to royalblue */
   padding: 20px 0;
   text-align: center;
 }
@@ -112,6 +111,7 @@ footer p {
   color: #fff;
   margin: 0;
 }
+
   </style>
 </head>
 <body>
